# nexent

./: .dockerignore  .gitignore  LICENSE  README.md  README_CN.md
backend/: data_process_service.py  mcp_service.py  pyproject.toml
backend/agents/: agent_run_manager.py  create_agent_info.py  skill_creation_agent.py
backend/apps/: a2a_client_app.py  a2a_server_app.py  agent_app.py  app_factory.py  config_app.py  conversation_management_app.py  data_process_app.py  dify_app.py  file_management_app.py  group_app.py  haotian_app.py  idata_app.py  invitation_app.py  knowledge_summary_app.py  mcp_management_app.py  mock_user_management_app.py  model_managment_app.py  monitoring_app.py  northbound_app.py  northbound_base_app.py  northbound_knowledge_app.py  oauth_app.py  prompt_app.py  prompt_template_app.py  remote_mcp_app.py  runtime_app.py  skill_app.py  tenant_app.py  tool_config_app.py  user_app.py  user_management_app.py  vectordatabase_app.py  voice_app.py
backend/assets/: test_voice.pcm
backend/consts/: a2a_models.py  agent_unavailable_reasons.py  const.py  error_code.py  error_message.py  exceptions.py  model.py  oauth_providers.py  prompt_template.py  provider.py  scheduler.py
backend/data_process/: ray_actors.py  tasks.py  worker.py
backend/database/: a2a_agent_db.py  agent_db.py  agent_version_db.py  attachment_db.py  client.py  community_mcp_db.py  conversation_db.py  db_models.py  group_db.py  invitation_db.py  knowledge_db.py  model_management_db.py  oauth_account_db.py  outer_api_tool_db.py  prompt_template_db.py  remote_mcp_db.py  skill_db.py  token_db.py  tool_db.py  user_tenant_db.py
backend/middleware/: __init__.py  exception_handler.py
backend/prompts/: managed_system_prompt_template_en.yaml  managed_system_prompt_template_zh.yaml  manager_system_prompt_template_en.yaml  manager_system_prompt_template_zh.yaml  skill_creation_complicate_en.yaml  skill_creation_complicate_zh.yaml  skill_creation_simple_en.yaml  skill_creation_simple_zh.yaml
backend/prompts/utils/: generate_title_en.yaml  generate_title_zh.yaml  prompt_generate_en.yaml  prompt_generate_zh.yaml  prompt_optimize_en.yaml  prompt_optimize_zh.yaml
backend/services/: a2a_agent_adapter.py  a2a_client_service.py  a2a_server_service.py  agent_service.py  agent_version_service.py  asset_owner_visibility.py  auto_summary_scheduler.py  config_sync_service.py  conversation_management_service.py  data_process_service.py  datamate_service.py  dify_service.py  file_management_service.py  group_service.py  haotian_service.py  idata_service.py  image_service.py  invitation_service.py  mcp_container_service.py  mcp_management_service.py  model_health_service.py  model_management_service.py  model_provider_service.py  northbound_service.py  oauth_service.py  prompt_service.py  prompt_template_service.py  redis_service.py  remote_mcp_service.py  skill_service.py  tenant_service.py  tool_configuration_service.py  user_management_service.py  user_service.py  vectordatabase_service.py  voice_service.py
backend/services/providers/: dashscope_provider.py  silicon_provider.py  tokenpony_provider.py
backend/utils/: a2a_http_client.py  auth_utils.py  content_classifier_utils.py  context_utils.py  document_vector_utils.py  file_management_utils.py  http_client_utils.py  llm_utils.py  monitoring.py  nacos_client.py  prompt_template_utils.py  skill_params_utils.py  tool_utils.py
sdk/: pyproject.toml
sdk/benchmark/: README.md  agent_runner.py  paths.py  smoke.py
sdk/benchmark/acon_eval/: .gitignore  README.md  acon_eval_res.md  dataset.py  eval_utils.py  retriever_sesrver.py  run_acon_qa.py  tools.py
sdk/benchmark/eventqa_eval/: .gitignore  README.md  RUNBOOK.md  dataset.py  download_data.py  eval_utils.py  merge_partial.py  run_eventqa.py  salvage_trace.py
sdk/benchmark/longmemeval_eval/: .gitignore  README.md  dataset.py  download_data.py  eval_utils.py  run_longmemeval.py  run_with_debugger.py  summary_schemas.py
sdk/benchmark/manual_cases/: .gitignore  README.md  calibrate_thresholds.py  eval_utils.py  note_benchmark.md  summary_inspector.py  test_benchmark.py
sdk/benchmark/manual_cases/cases/: .gitignore
sdk/ctx_debugger/: README.md  __init__.py  __main__.py  debugger.py  example_with_benchmark.py  example_with_eventqa.py  inspector.py  interactive.py  langfuse_eval_assessment.md  langfuse_export.py
sdk/ctx_debugger/langfuse/: .gitignore  docker-compose.yml
sdk/nexent/: __init__.py
sdk/nexent/container/: __init__.py  container_client_factory.py  docker_client.py  k8s_client.py  k8s_config.py
sdk/nexent/core/agents/: __init__.py  a2a_agent_proxy.py  agent_context.py  agent_model.py  core_agent.py  nexent_agent.py  run_agent.py  summary_cache.py  summary_config.py
sdk/nexent/core/models/: __init__.py  ali_stt_model.py  ali_tts_model.py  embedding_model.py  message_utils.py  openai_llm.py  openai_long_context_model.py  openai_vlm.py  rerank_model.py  stt_model.py  tts_model.py  volc_stt_model.py  volc_tts_model.py
sdk/nexent/core/prompts/: analyze_audio_en.yaml  analyze_audio_zh.yaml  analyze_video_en.yaml  analyze_video_zh.yaml
sdk/nexent/core/tools/: __init__.py  analyze_audio_tool.py  analyze_image_tool.py  analyze_text_file_tool.py  analyze_video_tool.py  create_directory_tool.py  create_file_tool.py  datamate_search_tool.py  delete_directory_tool.py  delete_file_tool.py  dify_search_tool.py  exa_search_tool.py  get_email_tool.py  haotian_search_tool.py  (+13 more)
sdk/nexent/data_process/: core.py  extract_image.py  file_splitter.py  json_chunk_processor.py  openpyxl_processor.py  unstructured_processor.py
sdk/nexent/datamate/: datamate_client.py
sdk/nexent/memory/: __init__.py  memory_service.py
sdk/nexent/monitor/: __init__.py  agent_observability.py  monitoring.py
sdk/nexent/multi_modal/: load_save_object.py  utils.py
sdk/nexent/skills/: __init__.py  constants.py  skill_loader.py  skill_manager.py
sdk/nexent/storage/: minio.py  storage_client_base.py
sdk/nexent/utils/: http_client_manager.py
sdk/nexent/vector_database/: base.py  datamate_core.py  elasticsearch_core.py
(+698 files in other folders)
